@@ -1,6 +1,7 @@
 Changes in NUnitAsp 1.3:
 Produced by Jim Little.
 * Browser.ElapsedServerTime now works.
+* Added support for multiline text boxes.  Thanks to (luKa) for his submission.
 
 
 Changes in NUnitAsp 1.2.1:
